2022-03-21  Jose E. Marchesi  <jemarch@gnu.org>

	* emacs/poke.el (poke-repl-input-sender): Avoid race condition in
	repl handling.

2022-03-18  Jose E. Marchesi  <jemarch@gnu.org>

	* emacs/poke.el (poke-edit-1): Use tree-mode when formatting
	element values.
	(poke-exit): Handle *poke-edit*.

2022-03-17  Jose E. Marchesi  <jemarch@gnu.org>

	* emacs/poke.el (poke-maps): Define.
	(poke-exit): Handle *poke-maps*.
	(poke-repl-mode-map): Adds keybind for poke-maps.
	(poke-maps-mode): Define.
	(poke-maps-mode-map): Likewise.

2022-03-17  Jose E. Marchesi  <jemarch@gnu.org>

	* emacs/poke.el (poke-setting-pretty-print): New variable.
	(poke-setting-omode): Likewise.
	(poke-settings-create-widgets): New function.
	(poke-settings): Likewise.
	(poke-exit): Kill buffer *poke-settings*.

2022-03-16  Jose E. Marchesi  <jemarch@gnu.org>

	* emacs/poke.el (poke-vu-cmd-prev-line): Renamed to feature cmd in
	the name.
	(poke-vu-cmd-page-down): Likewise.
	(poke-vu-cmd-page-up): Likewise.
	(poke-vu-cmd-goto-byte): Likewise.
	(poke-vu-mode): Adjust accordingly.
	(poke-vu-goto-byte): New function.
	(poke-vu-cmd-goto-byte): Use poke-vu-goto-byte.

2022-03-16  Jose E. Marchesi  <jemarch@gnu.org>

	* emacs/poke.el (poke-vu-refresh): Ask for the right number of
	lines, taking the header and modeline into account.
	(poke-repl): Do not show banner if repl is already alive.

2022-03-16  Jose E. Marchesi  <jemarch@gnu.org>
2022-03-16  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* libpoke/ios-dev-stream.c (ios_dev_stream_pread): Fix call to
	fread.

2022-03-15  Jose E. Marchesi  <jemarch@gnu.org>

	* poked/pk-dump-minimal.pk: Print in larger chunks.

2022-03-15  Jose E. Marchesi  <jemarch@gnu.org>

	* emacs/poke.el (poke-make-pokelet-process-new): Get unibyte input
	in the pokelet processes.

2022-03-15  Jose E. Marchesi  <jemarch@gnu.org>

	* poked/pk-dump-minimal.pk: Minimize pokelet commands when dumping
	bytes.

2022-03-15  Jose E. Marchesi  <jemarch@gnu.org>
